version 0.4: (TBD)
	* Unit tests for qpid::proton::Message.

version 0.3: (15 January 2013)
	* No language-specific features developed in this release.

version 0.2: (30 November 2012)
	* First implementation of the stable APIs on top of swig.
	* Provides the qpid::proton::Message class.
	* Provides the qpid::proton::Messenger class.
	* Provides a send and recv example for the Perl bindings.